--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/youtube-player": "^12.1.1",
     "angular-bootstrap-md": "^11.1.0",
     "bootstrap": "^5.0.2",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-owl-carousel-o": "^6.0.0",
